[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "py_sberbank_payments"
description = "Python wrapper for Sberbank Payments API."
readme = "README.md"
requires-python = ">=3.10"
license = "LGPL-3.0"
authors = [
	{ name = "Dmitry Dobrynin", email = "dd@tovarisch.engineer" },
]
keywords = ["sberbank", "api", "payment"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Web Environment",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
	"Natural Language :: Russian",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: Implementation :: CPython",
	"Programming Language :: Python :: Implementation :: PyPy",
	"Topic :: Internet :: WWW/HTTP",
	"Topic :: Software Development :: Libraries",
	"Topic :: Utilities",
]
dependencies = [
	"requests>=2,<3",
]
dynamic = ["version"]

[project.urls]
# "Documentation" = "https://gocream.github.io/dd_yandex_pay"
"Repository" = "https://github.com/gocream/py_sberbank_payments"
# "Changelog" = "https://gocream.github.io/dd_yandex_pay/changelog/"
"Bug Tracker" = "https://github.com/gocream/py_sberbank_payments/issues"

[tool.hatch.version]
path = "py_sberbank_payments/__init__.py"

[tool.hatch.build]
include = [
	"py_sberbank_payments",
	"AUTHORS",
]
exclude = [
	# "/docs",
	".gitignore",
	"CHANGELOG.md",
	# "CONTRIBUTING.md",
	"tests",
]
