[metadata]
name = pysberbank
version = attr: pysberbank.__version__
url = https://gitlab.com/gocream/pysberbank
author = Dmitry Dobrynin
author_email = dd@manin.space
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Natural Language :: Russian
    Programming Language :: Python
    Programming Language :: Python :: 3
license = GNU GPL v3
description = Python wrapper for Sberbank API.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = false
setup_requires =
    flake8
    isort
install_requires =
    requests>=2.18.4,<3
python_requires = >=3.8
include_package_data = true
packages = find:

[options.extras_require]
dev =
    flake8 == 6.0.0
    isort == 5.10.1

[bdist_wheel]
universal = 1

[bdist_rpm]
doc_files = AUTHORS LICENSE README.md

[flake8]
exclude = build,.git,lib,bin
ignore = E251
# ,E123,E128,E402,E501,W503,E731,W601
max-line-length = 79

[isort]
# https://github.com/timothycrosley/isort/wiki/isort-Settings
line_length=79
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = pysberbank
multi_line_output = 5
not_skip = __init__.py
